# ai-diplomatic-negotiator

./: .gitignore  ARCH.md  DONE.md  PLAN.md  PRODUCT_BRIEF.md  PROGRESS.json  TODO.md  docker-compose.dev.yml  env.example  package.json
apps/frontend/: next.config.js  package.json
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/src/components/drafting/: ApprovalPanel.tsx  PackageEditor.tsx
apps/frontend/src/components/exports/: ExportHub.tsx
apps/frontend/src/components/negotiation/: ConcessionTimeline.tsx  MediatorConsole.tsx  OfferBuilder.tsx  OfferCard.tsx  TranscriptStream.tsx  UtilityMatrix.tsx
apps/gateway/: package.json
apps/gateway/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/gateway/src/approvals/: approvals.controller.ts  approvals.module.ts  approvals.service.ts
apps/gateway/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/gateway/src/database/: database.module.ts
apps/gateway/src/exports/: exports.controller.ts  exports.module.ts  exports.service.ts
apps/orchestrator/: pyproject.toml  requirements.txt
apps/orchestrator/orchestrator/: __init__.py  config.py  main.py
apps/orchestrator/orchestrator/api/v1/: api.py
apps/orchestrator/orchestrator/api/v1/endpoints/: health.py  negotiations.py
apps/workers/: requirements.txt
apps/workers/workers/: __init__.py  celery_app.py  config.py
apps/workers/workers/tasks/: bundle_optimizer.py  exporter.py  intake_normalizer.py  mediator_agent.py  offer_proposer.py  position_drafter.py  reporter.py  risk_engine.py  zopa_checker.py
(+33 files in other folders)
